--- a/Help/Makefile.in
+++ b/Help/Makefile.in
@@ -97,11 +97,12 @@ PKG_STUB_LIB_FILE = @PKG_STUB_LIB_FILE@
 PKG_STUB_OBJECTS = @PKG_STUB_OBJECTS@
 PKG_STUB_SOURCES = @PKG_STUB_SOURCES@
 PKG_TCL_SOURCES = @PKG_TCL_SOURCES@
+SDX = @SDX@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
-SNITLIB = @SNITLIB@
 STRIP = @STRIP@
-TCLODBCLIB = @TCLODBCLIB@
+TCLKIT = @TCLKIT@
+TCLKITRUN = @TCLKITRUN@
 TCLSH_PROG = @TCLSH_PROG@
 TCLXMLLIB = @TCLXMLLIB@
 TCL_BIN_DIR = @TCL_BIN_DIR@
@@ -130,6 +131,7 @@ TK_STUB_LIB_SPEC = @TK_STUB_LIB_SPEC@
 TK_VERSION = @TK_VERSION@
 TK_XINCLUDES = @TK_XINCLUDES@
 TOP_DIR = @TOP_DIR@
+URILIB = @URILIB@
 VERSION = @VERSION@
 WISH_PROG = @WISH_PROG@
 ac_ct_STRIP = @ac_ct_STRIP@
