--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
-AC_INIT(HomeLibrarian,3.0)
+AC_INIT(HomeLibrarian,3.0b1)
 AC_CONFIG_SRCDIR(Scripts/HL3.src)
 AM_INIT_AUTOMAKE
 
-AC_CONFIG_FILES([config_tcl Makefile Images/Makefile Scripts/Makefile Documentation/Makefile 
+AC_CONFIG_FILES([Makefile Images/Makefile Scripts/Makefile Documentation/Makefile 
 		 BuildScripts/Makefile Help/Makefile])
 
 if test "x${prefix}" = "xNONE"; then
@@ -53,24 +53,24 @@ else
 fi
 AC_SUBST(BWLIB)
 
-AC_MSG_CHECKING(snit dir)
-SNITLIB=${TCL_LIBRARY}
-dirs=${TCL_AUTO_PATH}
-for i in $dirs ; do 
-  subdirs="$i/snit* $i/tcllib*/snit*"
-  for j in $subdirs ; do
-    if test -d "$j" -a -f "$j/pkgIndex.tcl"; then
-      SNITLIB=`cd $j; pwd`
-    fi
-  done
-done
-AC_ARG_WITH(snitlib, [  --with-snitlib=DIR          use snit from DIR], SNITLIB=$withval,)
-if test -d $SNITLIB; then
-   AC_MSG_RESULT([using snit library in $SNITLIB])
-else
-   AC_MSG_ERROR(snit library directory $SNITLIB doesn't exist)
-fi
-AC_SUBST(SNITLIB)
+#AC_MSG_CHECKING(snit dir)
+#SNITLIB=${TCL_LIBRARY}
+#dirs=${TCL_AUTO_PATH}
+#for i in $dirs ; do 
+#  subdirs="$i/snit* $i/tcllib*/snit*"
+#  for j in $subdirs ; do
+#    if test -d "$j" -a -f "$j/pkgIndex.tcl"; then
+#      SNITLIB=`cd $j; pwd`
+#    fi
+#  done
+#done
+#AC_ARG_WITH(snitlib, [  --with-snitlib=DIR          use snit from DIR], SNITLIB=$withval,)
+#if test -d $SNITLIB; then
+#   AC_MSG_RESULT([using snit library in $SNITLIB])
+#else
+#   AC_MSG_ERROR(snit library directory $SNITLIB doesn't exist)
+#fi
+#AC_SUBST(SNITLIB)
 
 AC_MSG_CHECKING(http dir)
 HTTPLIB=${TCL_LIBRARY}
@@ -91,24 +91,26 @@ else
 fi
 AC_SUBST(HTTPLIB)
 
-AC_MSG_CHECKING(TclODBC dir)
-TCLODBCLIB=${TCL_LIBRARY}
+
+AC_MSG_CHECKING(uri dir)
+URILIB=${TCL_LIBRARY}
 dirs=${TCL_AUTO_PATH}
 for i in $dirs ; do 
-  subdirs="$i/TclODBC*"
+  subdirs="$i/tcllib*/uri* $i/uri*"
   for j in $subdirs ; do
     if test -d "$j" -a -f "$j/pkgIndex.tcl"; then
-      TCLODBCLIB=`cd $j; pwd`
+      URILIB=`cd $j; pwd`
     fi
   done
 done
-AC_ARG_WITH(tclodbclib, [  --with-tclodbclib=DIR          use TclODBC from DIR], TCLODBCLIB=$withval,)
-if test -d $TCLODBCLIB; then
-   AC_MSG_RESULT([using TclODBC library in $TCLODBCLIB])
+AC_ARG_WITH(urilib, [  --with-urilib=DIR          use uri from DIR], URILIB=$withval,)
+if test -d $URILIB; then
+   AC_MSG_RESULT([using uri library in $URILIB])
 else
-   AC_MSG_ERROR(TclODBC library directory $TCLODBCLIB doesn't exist)
+   AC_MSG_ERROR(uri library directory $URILIB doesn't exist)
 fi
-AC_SUBST(TCLODBCLIB)
+AC_SUBST(URILIB)
+
 
 AC_MSG_CHECKING(Tclxml dir)
 TCLXMLLIB=${TCL_LIBRARY}
@@ -128,6 +130,23 @@ else
    AC_MSG_ERROR(Tclxml library directory $TCLXMLLIB doesn't exist)
 fi
 AC_SUBST(TCLXMLLIB)
+
+AC_PATH_PROGS(SDX,sdx.kit sdx)
+AC_PATH_PROGS(TCLKIT,tclkit)
+TCLKITRUN="${TCL_EXEC_PREFIX}/bin/tclkit$EXEEXT"
+AC_ARG_WITH(tclkitrun, [  --with-tclkitrun=filename     use tclkit runtime in fi
+lename], TCLKITRUN=$withval,)
+if test -x $TCLKITRUN;  then
+   AC_MSG_RESULT([using tclkit runtime $TCLKITRUN])
+else
+   AC_MSG_ERROR([Can't find tclkit, please use --with-tclkitrun to set the tclki
+t])
+fi
+AC_SUBST(TCLKITRUN)
+
+AC_PATH_PROG(PDFLATEX,pdflatex,/bin/true)
+AC_PATH_PROGS(HTLATEX,[htlatex htlatex.sh],/bin/true)
+
 
 AC_OUTPUT
 
