--- a/Makefile.in
+++ b/Makefile.in
@@ -13,6 +13,7 @@
 # PARTICULAR PURPOSE.
 
 @SET_MAKE@
+
 srcdir = @srcdir@
 top_srcdir = @top_srcdir@
 VPATH = @srcdir@
@@ -35,9 +36,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 subdir = .
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
-	$(srcdir)/Makefile.in $(srcdir)/config_tcl.in \
-	$(top_srcdir)/configure AUTHORS COPYING ChangeLog INSTALL NEWS \
-	install-sh missing
+	$(srcdir)/Makefile.in $(top_srcdir)/configure AUTHORS COPYING \
+	ChangeLog INSTALL NEWS install-sh missing
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/tcl.m4 $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -45,7 +45,10 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
  configure.lineno configure.status.lineno
 mkinstalldirs = $(install_sh) -d
-CONFIG_CLEAN_FILES = config_tcl
+CONFIG_CLEAN_FILES =
+am__installdirs = "$(DESTDIR)$(bindir)"
+binSCRIPT_INSTALL = $(INSTALL_SCRIPT)
+SCRIPTS = $(bin_SCRIPTS)
 SOURCES =
 DIST_SOURCES =
 RECURSIVE_TARGETS = all-recursive check-recursive dvi-recursive \
@@ -112,11 +115,12 @@ PKG_STUB_LIB_FILE = @PKG_STUB_LIB_FILE@
 PKG_STUB_OBJECTS = @PKG_STUB_OBJECTS@
 PKG_STUB_SOURCES = @PKG_STUB_SOURCES@
 PKG_TCL_SOURCES = @PKG_TCL_SOURCES@
+SDX = @SDX@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
-SNITLIB = @SNITLIB@
 STRIP = @STRIP@
-TCLODBCLIB = @TCLODBCLIB@
+TCLKIT = @TCLKIT@
+TCLKITRUN = @TCLKITRUN@
 TCLSH_PROG = @TCLSH_PROG@
 TCLXMLLIB = @TCLXMLLIB@
 TCL_BIN_DIR = @TCL_BIN_DIR@
@@ -145,6 +149,7 @@ TK_STUB_LIB_SPEC = @TK_STUB_LIB_SPEC@
 TK_VERSION = @TK_VERSION@
 TK_XINCLUDES = @TK_XINCLUDES@
 TOP_DIR = @TOP_DIR@
+URILIB = @URILIB@
 VERSION = @VERSION@
 WISH_PROG = @WISH_PROG@
 ac_ct_STRIP = @ac_ct_STRIP@
@@ -172,7 +177,19 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 ACLOCAL_AMFLAGS = -I .
+bin_SCRIPTS = HL3$(EXEEXT)
 SUBDIRS = Images Scripts Documentation BuildScripts Help
+LibraryScripts = Scripts/BWHelp.tcl Scripts/labelselectcolor.tcl \
+		 Scripts/panedw.tcl Scripts/fileentry.tcl \
+		 Scripts/labelspinbox.tcl Scripts/splash.tcl \
+		 Scripts/labelcombobox.tcl Scripts/mainwindow.tcl \
+		 Scripts/BWStdMenuBar.tcl Scripts/AnimatedHeader.tcl \
+		 Scripts/SearchWindow.tcl Scripts/EditWindow.tcl \
+		 Scripts/DatabaseFunctions.tcl Scripts/AECFunctions.tcl \
+		 Scripts/PrintFunctions.tcl Scripts/ImportV1Ascii.tcl \
+		 Scripts/ImportV2Ascii.tcl
+
+EXTRA_DIST = bootstrap snodbc.kit
 all: all-recursive
 
 .SUFFIXES:
@@ -209,8 +226,25 @@ $(top_srcdir)/configure:  $(am__configure_deps)
 	cd $(srcdir) && $(AUTOCONF)
 $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 	cd $(srcdir) && $(ACLOCAL) $(ACLOCAL_AMFLAGS)
-config_tcl: $(top_builddir)/config.status $(srcdir)/config_tcl.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
+install-binSCRIPTS: $(bin_SCRIPTS)
+	@$(NORMAL_INSTALL)
+	test -z "$(bindir)" || $(mkdir_p) "$(DESTDIR)$(bindir)"
+	@list='$(bin_SCRIPTS)'; for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  if test -f $$d$$p; then \
+	    f=`echo "$$p" | sed 's|^.*/||;$(transform)'`; \
+	    echo " $(binSCRIPT_INSTALL) '$$d$$p' '$(DESTDIR)$(bindir)/$$f'"; \
+	    $(binSCRIPT_INSTALL) "$$d$$p" "$(DESTDIR)$(bindir)/$$f"; \
+	  else :; fi; \
+	done
+
+uninstall-binSCRIPTS:
+	@$(NORMAL_UNINSTALL)
+	@list='$(bin_SCRIPTS)'; for p in $$list; do \
+	  f=`echo "$$p" | sed 's|^.*/||;$(transform)'`; \
+	  echo " rm -f '$(DESTDIR)$(bindir)/$$f'"; \
+	  rm -f "$(DESTDIR)$(bindir)/$$f"; \
+	done
 uninstall-info-am:
 
 # This directory's subdirectories are mostly independent; you can cd
@@ -336,7 +370,6 @@ distclean-tags:
 distdir: $(DISTFILES)
 	$(am__remove_distdir)
 	mkdir $(distdir)
-	$(mkdir_p) $(distdir)/.
 	@srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`; \
 	topsrcdirstrip=`echo "$(top_srcdir)" | sed 's|.|.|g'`; \
 	list='$(DISTFILES)'; for file in $$list; do \
@@ -477,9 +510,12 @@ distcleancheck: distclean
 	       exit 1; } >&2
 check-am: all-am
 check: check-recursive
-all-am: Makefile
+all-am: Makefile $(SCRIPTS)
 installdirs: installdirs-recursive
 installdirs-am:
+	for dir in "$(DESTDIR)$(bindir)"; do \
+	  test -z "$$dir" || $(mkdir_p) "$$dir"; \
+	done
 install: install-recursive
 install-exec: install-exec-recursive
 install-data: install-data-recursive
@@ -525,7 +561,7 @@ info-am:
 
 install-data-am:
 
-install-exec-am:
+install-exec-am: install-binSCRIPTS
 
 install-info: install-info-recursive
 
@@ -551,7 +587,7 @@ ps: ps-recursive
 
 ps-am:
 
-uninstall-am: uninstall-info-am
+uninstall-am: uninstall-binSCRIPTS uninstall-info-am
 
 uninstall-info: uninstall-info-recursive
 
@@ -561,14 +597,67 @@ uninstall-info: uninstall-info-recursive
 	dist-tarZ dist-zip distcheck distclean distclean-generic \
 	distclean-recursive distclean-tags distcleancheck distdir \
 	distuninstallcheck dvi dvi-am html html-am info info-am \
-	install install-am install-data install-data-am install-exec \
-	install-exec-am install-info install-info-am install-man \
-	install-strip installcheck installcheck-am installdirs \
-	installdirs-am maintainer-clean maintainer-clean-generic \
-	maintainer-clean-recursive mostlyclean mostlyclean-generic \
-	mostlyclean-recursive pdf pdf-am ps ps-am tags tags-recursive \
-	uninstall uninstall-am uninstall-info-am
+	install install-am install-binSCRIPTS install-data \
+	install-data-am install-exec install-exec-am install-info \
+	install-info-am install-man install-strip installcheck \
+	installcheck-am installdirs installdirs-am maintainer-clean \
+	maintainer-clean-generic maintainer-clean-recursive \
+	mostlyclean mostlyclean-generic mostlyclean-recursive pdf \
+	pdf-am ps ps-am tags tags-recursive uninstall uninstall-am \
+	uninstall-binSCRIPTS uninstall-info-am
 
+
+HL3$(EXEEXT) : Scripts/HL3.src $(LibraryScripts) \
+		$(top_builddir)/Help/hh.index \
+		$(top_builddir)/Help/index.hh \
+		$(top_builddir)/snodbc.kit \
+		$(top_builddir)/Images/*.gif
+	-rm -f  HL3.kit
+	-rm -rf HL3.vfs
+	$(TCLKIT) $(SDX) qwrap Scripts/HL3.src
+	$(TCLKIT) $(SDX) unwrap HL3.kit
+	-rm -f  HL3.kit
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitDir.kit HL3 \
+		lib $(BWLIB)
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitDir.kit HL3 \
+		lib $(HTTPLIB)
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitDir.kit HL3 \
+		lib $(URILIB)
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitDir.kit HL3 \
+		lib $(TCLXMLLIB)
+	-rm -rf  snodbc.vfs
+	$(TCLKIT) $(SDX) unwrap $(top_builddir)/snodbc.kit
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitDir.kit HL3 \
+		lib snodbc.vfs/lib
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitDir.kit HL3 \
+		lib snodbc.vfs/compat-lib
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitFile.kit HL3 \
+		lib/Common $(LibraryScripts)
+	$(TCLKIT) $(top_builddir)/BuildScripts/MakePkgIndex.kit HL3 \
+		Common
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitFile.kit HL3 \
+		Help $(top_builddir)/Help/*.hh \
+		     $(top_builddir)/Help/hh.index
+	$(TCLKIT) $(top_builddir)/BuildScripts/AddKitFile.kit HL3 \
+		Images $(top_builddir)/Images/*.gif
+	$(TCLKIT) $(SDX) wrap HL3$(EXEEXT) -runtime $(TCLKITRUN)
+	-rm -rf  snodbc.vfs
+	-rm -rf HL3.vfs
+
+$(top_builddir)/Help/hh.index : \
+	$(top_builddir)/Help/*.hh
+	$(MAKE) -C $(top_builddir)/Help/hh.index
+
+$(top_builddir)/Help/index.hh : \
+	$(top_builddir)/Help/*.hh
+	$(MAKE) -C $(top_builddir)/Help/index.hh
+
+binzip: $(bin_SCRIPTS)
+	-rm -f $(distdir)-$(PLATFORM)Bin.zip
+	zip $(distdir)-$(PLATFORM)Bin.zip $^
+
+bintgz: $(bin_SCRIPTS)
+	tar cjvf $(distdir)-$(PLATFORM)Bin.tar.bz2 $^
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
